# atuio

./: Cargo.toml  README.md
src/: binds.rs  config.rs  lib.rs  main.rs  tui.rs
src/snapshots/: atuio__tui__tests__amplify.snap  atuio__tui__tests__cursor_end.snap  atuio__tui__tests__cursor_left.snap  atuio__tui__tests__cursor_right.snap  atuio__tui__tests__cut.snap  atuio__tui__tests__load.snap  atuio__tui__tests__select_all.snap  atuio__tui__tests__select_backward.snap  atuio__tui__tests__select_forward.snap  atuio__tui__tests__start.snap  atuio__tui__tests__tui_draw_rect.snap.new  atuio__tui__tests__tui_render_empty.snap.new  atuio__tui__tests__zoom1.snap  atuio__tui__tests__zoom10.snap  atuio__tui__tests__zoom10right.snap  atuio__tui__tests__zoom2.snap  atuio__tui__tests__zoom_in.snap  atuio__tui__tests__zoom_out.snap
