[package]
name = "atuio"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Audio editing TUI"
homepage = "https://github.com/rrc/atuio"
repository = "https://github.com/rrc/atuio"
keywords = ["tui", "audio"]
categories = ["graphics", "multimedia::audio"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
env_logger = "0.11"
rodio = "0.20.1"
log = "0.4"
ratatui = "0.28"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
xdg = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"
insta = { version = "1.39" }
insta-cmd = "0.6"
tempfile = "3.10"
